# NJU-23Fall-Software-Engineering-Labs-and-Projects

./: CMakeLists.txt  README.md  main.cpp
data/: appointments.csv
lib/: address.hh  ambulance.hh  appointment.hh  debug.h  doctor.hh  driver.hh  hospital.hh  nurse.hh  patient.hh  person.hh  product.h
src/: address.cpp  ambulance.cpp  appointment.cpp  doctor.cpp  driver.cpp  global.cpp  hospital.cpp  nurse.cpp  patient.cpp  person.cpp  product.cpp
tests/: unittest.cpp
